--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,10 @@
+// server
 PORT=5000
 HOST=http://localhost
+
+
+// database
+DB_NAME=brisasdemamporaldb
+DB_USER=root
+DB_PASSWORD=
+DB_HOST=localhost
