--- a/backend/.env
+++ b/backend/.env
@@ -8,3 +8,12 @@ DB_NAME=brisasdemamporaldb
 DB_USER=root
 DB_PASSWORD=
 DB_HOST=localhost
+
+# JWT
+JWT_SECRET=tu_clave_secreta_muy_segura
+
+# Email
+EMAIL_SERVICE=gmail
+EMAIL_USER=tu_correo@gmail.com
+EMAIL_PASSWORD=tu_contraseña_o_app_password
+
