--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,13 @@
   "dependencies": {
     "@react-pdf/renderer": "^4.3.0",
     "@tailwindcss/vite": "^4.0.14",
-    "axios": "^1.8.3",
+    "axios": "^1.8.4",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
     "xlsx": "^0.18.5"
