--- a/backend/.env
+++ b/backend/.env
@@ -14,6 +14,6 @@ JWT_SECRET=tu_clave_secreta_muy_segura
 
 # Email
 EMAIL_SERVICE=gmail
-EMAIL_USER=tu_correo@gmail.com
-EMAIL_PASSWORD=tu_contraseña_o_app_password
+EMAIL_USER=brisasdemamporal.noreply@gmail.com
+EMAIL_PASSWORD='xrzh jxwi onaq jlwh'
 
