--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
+    "react-to-print": "^3.0.5",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
