--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,18 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
     "@react-pdf/renderer": "^4.3.0",
     "@tailwindcss/vite": "^4.0.14",
     "axios": "^1.8.4",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
+    "install": "^0.13.0",
     "jspdf": "^3.0.1",
+    "npm": "^11.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
     "react-to-print": "^3.0.5",
+    "react-toastify": "^11.0.5",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
