--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "html2canvas": "^1.4.1",
     "install": "^0.13.0",
     "jspdf": "^3.0.1",
+    "jwt-decode": "^4.0.0",
     "npm": "^11.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
