--- a/backend/.env
+++ b/backend/.env
@@ -4,12 +4,10 @@ HOST=http://localhost
 
 
 // database
-DB_NAME=brisasdemamporal_database
-DB_USER=406468
-DB_PASSWORD=xHb29q29aH7@i7j
-DB_HOST=mysql-brisasdemamporal.alwaysdata.net
-
-
+DB_NAME=brisasdemamporaldb
+DB_USER=root
+DB_PASSWORD=
+DB_HOST=localhost
 
 # JWT
 JWT_SECRET=tu_clave_secreta_muy_segura
@@ -18,3 +16,8 @@ JWT_SECRET=tu_clave_secreta_muy_segura
 EMAIL_SERVICE=gmail
 EMAIL_USER=brisasdemamporal.noreply@gmail.com
 EMAIL_PASSWORD='xrzh jxwi onaq jlwh'
+
+# DB_NAME=brisasdemamporal_database
+# DB_USER=406468
+# DB_PASSWORD=xHb29q29aH7@i7j
+# DB_HOST=mysql-brisasdemamporal.alwaysdata.net
