--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,8 @@
-// server
+# Server Configuration
 PORT=5000
-HOST=http://localhost
+HOST=localhost
 
-
-// database
+# Database Configuration
 DB_NAME=brisasdemamporaldb
 DB_USER=root
 DB_PASSWORD=
@@ -17,6 +16,7 @@ EMAIL_SERVICE=gmail
 EMAIL_USER=brisasdemamporal.noreply@gmail.com
 EMAIL_PASSWORD='xrzh jxwi onaq jlwh'
 
+# Backup - Remote Database (commented)
 # DB_NAME=brisasdemamporal_database
 # DB_USER=406468
 # DB_PASSWORD=xHb29q29aH7@i7j
